--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-<style>
-    body {
-        margin: 0;
-        background-color: LightYellow;
-    }
-</style>
-<canvas></canvas>
-<script type="module" src="./index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./index.css" />
+		<script type="module" src="./index.js"></script>
+		<title>Document</title>
+	</head>
+	<body>
+		<div id="main-container" class="container">
+			<canvas></canvas>
+		</div>
+		<div id="pause-container">
+			<div id="pause-menu" class="container">
+				<p>暫停遊戲</p>
+				<button>繼續</button>
+				<button id="restart-button">重新開始</button>
+			</div>
+		</div>
+	</body>
+</html>
