feat: complete game start and reset functions

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 		<div id="main-container" class="container">
 			<canvas></canvas>
 		</div>
-		<div id="pause-container">
-			<div id="pause-menu" class="container">
-				<p>暫停遊戲</p>
-				<button>繼續</button>
-				<button id="restart-button">重新開始</button>
-			</div>
+
+		<div id="pause-menu" class="container invisible">
+			<p>暫停遊戲</p>
+			<button>繼續</button>
+			<button id="restart-button">重新開始</button>
 		</div>
 	</body>
 </html>
