feat: add start game button and logics

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 		<div id="pause-menu" class="container invisible">
 			<p>暫停遊戲</p>
-			<button>繼續</button>
+			<button id="continue-button">繼續</button>
 			<button id="restart-button">重新開始</button>
 		</div>
+
+		<button id="start-button">開始遊戲</button>
 	</body>
 </html>
