feat: add level

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 			<p id="score-label">0</p>
 		</div>
 
+		<div id="level-menu" class="container">
+			<p>等級:</p>
+			<p id="level-label">1</p>
+		</div>
+
 		<button id="start-button">開始遊戲</button>
 	</body>
 </html>
