feat: add keyboard shorcut

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 		<div id="pause-menu" class="container invisible">
 			<p>暫停遊戲</p>
 			<button id="continue-button">繼續</button>
+			<button id="home-button">主頁</button>
 			<button id="restart-button">重新開始</button>
 		</div>
 
 		<div id="game-over-menu" class="container invisible">
 			<p>遊戲結束</p>
-			<button id="home-button">主頁</button>
+			<button id="game-over-home-button">主頁</button>
 			<button id="game-over-restart-button">重新開始</button>
 		</div>
 
