feat: show score when the game is over

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 		</div>
 
 		<div id="game-over-menu" class="container invisible">
-			<p>遊戲結束</p>
+			<p id="game-over-label">遊戲結束</p>
+			<div id="game-over-score-container">
+				<p id="game-over-score-label">分數: 0</p>
+			</div>
 			<button id="game-over-home-button">主頁</button>
 			<button id="game-over-restart-button">重新開始</button>
 		</div>
