feat: add audios

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			rel="stylesheet"
 		/>
 		<script type="module" src="./index.js"></script>
+		<audio id="strike-sound" src="./assets/strike.wav"></audio>
 		<title>Document</title>
 	</head>
 	<body class="unselectable">
