feat: add game title

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Tetris</title>
 		<link rel="stylesheet" href="./index.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Staatliches&family=Righteous&family=Roboto&display=swap"
 			rel="stylesheet"
 		/>
+		
 		<script type="module" src="./index.js"></script>
 		<audio id="strike-sound" src="./assets/strike.wav"></audio>
 		<title>Document</title>
@@ -18,6 +20,15 @@
 	<body class="unselectable">
 		<div id="main-container" class="container">
 			<canvas></canvas>
+		</div>
+
+		<div id="title" class="container">
+			<span>T</span>
+			<span>E</span>
+			<span>T</span>
+			<span>R</span>
+			<span>I</span>
+			<span>S</span>
 		</div>
 
 		<div id="score-menu" class="container">
